--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -6,15 +6,23 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock title %}</title>
+
+    {# Afin de permette LE LIEN entre nos fichiers html.twig et sa mise en page (ou stylisation)
+       la fonction asset() permet de charger dans le dossier "assets" le dossier "css" et ses fichiers coresspondants #}
     <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
 </head>
 <body>
 <header>
         <nav class="d-flex space-around">
             <div class="logo"><a href=""><img src="{{ asset('assets/img/logo.png') }}" alt="logo" class="resp">
-                    </a></div>
+                    </a>
+            </div>
+            <form action="{{ path('search_articles') }}" class="search-form-articles">
+                <input type="text" name="search" >
+            </form>
+
+
             <ul class="d-flex space-around">
-                <li> </li>
                 <li> <a href="">Actualités</a></li>
                 <li> <a href=""> Connexion</a></li>
                 <li> <a href="">S'insrcire</a></li>
