--- a/templates/list_articles.html.twig
+++ b/templates/list_articles.html.twig
@@ -8,9 +8,11 @@
 {% block article %}
         {% for article in articles %}
                 <div class="article">
-                        <h1>{{article.title}}</h1>
-                        <div class="image visible"><img src="{{article.image}}" alt="{{ article.title }}" class="resp anim"></div>
-                        <p>{{ article.createdAt|date('d/m/Y') }}</p>
+                        <a href="{{ path('show_article', {'id': article.id}) }}">
+                                <h1>{{article.title}}</h1>
+                        </a>
+                                <div class="image visible"><img src="{{article.image}}" alt="{{ article.title }}" class="resp anim"></div>
+                                <p>{{ article.createdAt|date('d/m/Y') }}</p>
                 </div>
 
         {% endfor %}
