admin_insertArticle depuis le Contrôleur

--- a/templates/list_articles.html.twig
+++ b/templates/list_articles.html.twig
@@ -6,14 +6,18 @@
 
 
 {% block article %}
-        {% for article in articles %}
-                <div class="article">
-                        <a href="{{ path('show_article', {'id': article.id}) }}">
-                                <h1>{{article.title}}</h1>
-                        </a>
-                                <div class="image visible"><img src="{{article.image}}" alt="{{ article.title }}" class="resp anim"></div>
-                                <p>{{ article.createdAt|date('d/m/Y') }}</p>
-                </div>
+        {% if articles|length>0 %}
+                {% for article in articles %}
+                        <div class="article">
+                                <a href="{{ path('show_article', {'id': article.id}) }}">
+                                        <h1>{{article.title}}</h1>
+                                </a>
+                                        <div class="image visible"><img src="{{article.image}}" alt="{{ article.title }}" class="resp anim"></div>
+                                        <p>{{ article.createdAt|date('d/m/Y') }}</p>
+                        </div>
 
-        {% endfor %}
+                {% endfor %}
+        {% else %}
+                <p>Il n'y a pas d'article correspondant à votre recherche</p>
+        {% endif %}
 {% endblock article %}
