--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -18,7 +18,7 @@
                     </a>
             </div>
             <form action="{{ path('search_articles') }}" class="search-form-articles">
-                <input type="text" name="search" >
+                <input type="text" name="search" placeholder="Rechercher">
             </form>
 
 
