--- a/templates/admin/article_update.html.twig
+++ b/templates/admin/article_update.html.twig
@@ -7,6 +7,6 @@
 
 {% block article %}
 
-        <p class="Message">Votre article a bien été inséré</p>
+    <h2 class="Message">L'article {{ article.title }} a bien été modifié !</h2>
 
 {% endblock article %}
