--- a/templates/list_articles.html.twig
+++ b/templates/list_articles.html.twig
@@ -4,11 +4,16 @@
     Liste des articles
 {% endblock title %}
 
+{% block header %}
+
+{% endblock header %}
+
 
 {% block article %}
         {% if articles|length>0 %}
                 {% for article in articles %}
                         <div class="article">
+                                <h2>{{ article.category.id }}</h2>
                                 <a href="{{ path('show_article', {'id': article.id}) }}">
                                         <h1>{{article.title}}</h1>
                                 </a>
