--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -55,14 +55,16 @@
 /* header */
 
 header{
-    height:20vh;
+    height:100vh;
     background-color: black;
     opacity : 0.9;
+    background-size: cover;
+
 }
 
 header nav{
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.3);
     padding: 10px 0;
     position: fixed;
     top:0;
@@ -70,12 +72,48 @@ header nav{
     z-index: 150;
 }
 
+header nav form{
+    margin-left: 80px;
+    margin-top: 50px;
+
+}
+
+header nav form input {
+    border: 0;
+    line-height: 2.5;
+    padding: 0px 20px;
+    font-size: 1rem;
+    text-align: center;
+    color-rendering: optimizeQuality;
+    color: #dfdfdf;
+    text-shadow: 1px 1px 1px #000;
+    border-radius: 10px;
+    background-color: rgba(255, 174, 173,0.7);
+    background-image: linear-gradient(to top left,
+    rgba(0, 0, 0, .2),
+    rgba(0, 0, 0, .2) 30%,
+    rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+    inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+header nav form input:hover {
+    background-color: rgb(114, 239, 237);
+}
+
+header nav form input:active {
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+    inset 2px 2px 3px rgba(0, 0, 0, .6);
+}
+
+
 header nav ul{
     width:80%;
-    padding-top: 40px;
+    padding-top: 0px;
 }
 
 header nav li{
+
 
     list-style-type: none;
     font-size: 32px;
@@ -83,10 +121,9 @@ header nav li{
 
 header nav li a{
     text-decoration: none;
-    color: gold;
+    color: lavender;
     text-shadow: 1px 1px 2px black;
     height:80%;
-    padding: auto;
     transition: all 0.5s ease;
 
 }
@@ -111,7 +148,11 @@ header nav ul li a:hover{
 
 
 
-/*body*/
+/*main*/
+
+main{
+    min-height: 58vh;
+}
 
 .container{
     width: 80%;
@@ -123,10 +164,11 @@ article{
 }
 
 .article {
-    width: 50%;
+    width: 80%;
+    margin:auto;
     text-align: center;
     padding: 20px;
-    background-color: rgba(24,34,135,0.2);
+    background-color: rgba(40,40,14,0.2);
 }
 
 h1{
@@ -140,6 +182,7 @@ h1{
 p{
     font-family: "Al Nile";
     text-align: justify;
+
 }
 
 /* home body */
@@ -172,6 +215,13 @@ p{
 
 .anim:hover>img{
     transform: scale(1.2);
+}
+
+.Message{
+    margin: auto;
+    padding-top: 200px;
+    font-size: 32px;
+    color: olive;
 }
 
 /* footer */
@@ -207,7 +257,6 @@ footer nav li a{
     color: gold;
     text-shadow: 1px 1px 2px black;
     height:80%;
-    padding: auto;
     transition: all 0.5s ease;
 
 }
