--- a/templates/list_articles.html.twig
+++ b/templates/list_articles.html.twig
@@ -13,7 +13,7 @@
         {% if articles|length>0 %}
                 {% for article in articles %}
                         <div class="article">
-                                <h2>{{ article.category.id }}</h2>
+                                <h2>{{ article.category.title }}</h2>
                                 <a href="{{ path('show_article', {'id': article.id}) }}">
                                         <h1>{{article.title}}</h1>
                                 </a>
