--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -5,7 +5,7 @@
                     </a></div>
                 <ul class="d-flex space-around">
                     <li> </li>
-                    <li> <a href="">Nous contacter</a></li>
+                    <li> <a href="" class="lienArticles">Nous contacter</a></li>
                 </ul>
             </nav>
 
