--- a/templates/article.html.twig
+++ b/templates/article.html.twig
@@ -7,7 +7,7 @@
 {% block article %}
 
     <article class="article">
-        <h2>{{ article.title }}</h2>
+        <h2 class="">{{ article.title }}</h2>
         <p>{{ article.content }}</p>
         <div class="image visible"><img src="{{article.image}}" alt="{{ article.title }}" class="resp anim"></div>
         <p>{{ article.createdAt|date('d/m/Y') }}</p>
