--- a/templates/categories.html.twig
+++ b/templates/categories.html.twig
@@ -9,7 +9,7 @@
         <h2>{{ category.title }}</h2>
 
             {# articles étant une arrayCollection j'effectue une boucle
-            afin de récupérer chaque articles contenu dans chaque catégorie : ici on récupère le titre de chaque article#}
+            afin de récupérer tous les articles contenu dans chaque catégorie : ici on récupère le titre des articles#}
             {% for article in category.articles %}
                 <h3>{{ article.title }}</h3>
             {% endfor%}
