update formulaire article et CRUD admin reste à styliser

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -2,7 +2,7 @@
 
 <main>
     <section class="container">
-        <article class="d-flex wrap ">
+        <article class=" ">
             {% block article %}
             {% endblock article %}
         </article>
