--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -10,6 +10,9 @@
     {# Afin de permette LE LIEN entre nos fichiers html.twig et sa mise en page (ou stylisation)
        la fonction asset() permet de charger dans le dossier "assets" le dossier "css" et ses fichiers coresspondants #}
     <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 </head>
 <body>
