--- a/templates/list_articles.html.twig
+++ b/templates/list_articles.html.twig
@@ -12,17 +12,19 @@
 {% block article %}
         {% if articles|length>0 %}
                 {% for article in articles %}
-                        <div class="article">
-                                {#  Pour faire afficher le titre de ma catégorie : j'appelle article.category.title
-                                grâce à la relation ManyToOne qui relie les deux entités : article et category.#}
-                                {% if article.category%}
-                                        <h1>{{ article.category.title }}</h1>
-                                {% endif %}
-                                        <a href="{{ path('show_article', {'id': article.id}) }}" class="lienArticles">
-                                                <h2>{{article.title}}</h2>
-                                        </a>
-                                                <div class="image visible"><img src="{{article.image}}" alt="{{ article.title }}" class="resp anim"></div>
-                                                <p>{{ article.createdAt|date('d/m/Y') }}</p>
+
+                                                    {#  Pour faire afficher le titre de ma catégorie : j'appelle article.category.title
+                                                    grâce à la relation ManyToOne qui relie les deux entités : article et category.#}
+                                                    {% if article.category%}
+                                                            <h1>{{ article.category.title }}</h1>
+                                                    {% endif %}
+                                                            <a href="{{ path('show_article', {'id': article.id}) }}" class="lienArticles">
+                                                                    <h2>{{article.title}}</h2>
+                                                            </a>
+                                                                    <div class="image visible"><img src="{{article.image}}" alt="{{ article.title }}" class="resp anim"></div>
+
+                                                                    <p>{{ article.createdAt|date('d/m/Y') }}</p>
+                            </div>
                         </div>
                 {% endfor %}
         {% else %}
