--- a/templates/admin/insert_article.html.twig
+++ b/templates/admin/insert_article.html.twig
@@ -10,6 +10,43 @@
     {#  Avec la méthode form, j'affiche mon formulaire d'insertion d'article avec le paramètre ici :
     articleFormView définit dans ma fonction insertArticle de mon ArticleController#}
 
-    {{ form(articleFormView) }}
+    {{ form_start(articleFormView) }}
+        <div class="form-group">
+            {{ form_label(articleFormView.title, 'titre', {'label_attr': {'class':'form'}}) }}
+
+            {{ form_widget(articleFormView.title, {'attr': {'class':'form-control'}}) }}
+        </div>
+
+    <div class="form-group">
+        {{ form_label(articleFormView.content, 'content', {'label_attr': {'class':'form'}}) }}
+
+        {{ form_widget(articleFormView.content, {'attr': {'class':'form'}}) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(articleFormView.image, 'image', {'label_attr': {'class':'form'}}) }}
+
+        {{ form_widget(articleFormView.image, {'image': {'class':'form'}}) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(articleFormView.createdAt, 'createdAt', {'label_attr': {'class':'form'}}) }}
+
+        {{ form_widget(articleFormView.createdAt, {'attr': {'class':'form'}}) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(articleFormView.isPublished, 'isPublished', {'label_attr': {'class':'form'}}) }}
+
+        {{ form_widget(articleFormView.isPublished, {'attr': {'class':'form'}}) }}
+    </div>
+
+    <div class="submit-form-article">
+        {{ form_widget(articleFormView.valider, {'attr': {'class':'form'}}) }}
+    </div>
+
+
+    {{ form_end(articleFormView) }}
+
 
 {% endblock article %}
