--- a/templates/admin/insert_categorie.html.twig
+++ b/templates/admin/insert_categorie.html.twig
@@ -7,9 +7,40 @@
 
 {% block article %}
 
-    {#  Avec la méthode form, j'affiche mon formulaire d'insertion d'article avec le paramètre ici :
-    articleFormView définit dans ma fonction insertArticle de mon ArticleController#}
+    {#  Avec la méthode form, j'affiche mon formulaire d'insertion de catégories avec le paramètre ici :
+    categorieFormView définit dans ma fonction insertCategory de mon CategoryController#}
 
-    {{ form(categorieFormView) }}
+    {{ form_start(categorieFormView) }}
+    <div class="form-group">
+        {{ form_label(categorieFormView.title, 'titre', {'label_attr': {'class':'form'}}) }}
+
+        {{ form_widget(categorieFormView.title, {'attr': {'class':'form-control'}}) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(categorieFormView.description, 'content', {'label_attr': {'class':'form'}}) }}
+
+        {{ form_widget(categorieFormView.description, {'attr': {'class':'form'}}) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(categorieFormView.createdAt, 'createdAt', {'label_attr': {'class':'form'}}) }}
+
+        {{ form_widget(categorieFormView.createdAt, {'attr': {'class':'form'}}) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(categorieFormView.isPublished, 'isPublished', {'label_attr': {'class':'form'}}) }}
+
+        {{ form_widget(categorieFormView.isPublished, {'attr': {'class':'form'}}) }}
+    </div>
+
+    <div class="submit-form-categorie">
+        {{ form_widget(categorieFormView.valider, {'attr': {'class':'form'}}) }}
+    </div>
+
+
+    {{ form_end(categorieFormView) }}
+
 
 {% endblock article %}
