constraints as assert

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -1,8 +1,8 @@
 {% include '_header.html.twig' %}
 
 <main>
-    <section class="container">
-        <article class=" ">
+    <section class="">
+        <article class="container d-flex justify-content-around">
             {% block article %}
             {% endblock article %}
         </article>
