--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,8 +1,8 @@
 {% include '_header.html.twig' %}
 
 <main>
-    <section class="container">
-        <article class="d-flex wrap ">
+    <section class="">
+        <article class="">
         {% block article %}
         {% endblock article %}
         </article>
