--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -233,6 +233,42 @@ p{
     font-size: 72px;
 }
 
+.form-submit{
+    border: 0;
+    line-height: 2.5;
+    padding: 0px 20px;
+    font-size: 1rem;
+    text-align: center;
+    color-rendering: optimizeQuality;
+    color: #ffffff;
+    text-shadow: 1px 1px 1px #000;
+    border-radius: 10px;
+    background-color: rgba(100, 100, 173,0.7);
+    background-image: linear-gradient(to top left,
+    rgba(0, 0, 0, .2),
+    rgba(0, 0, 0, .2) 30%,
+    rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+    inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+body{background-color:lightgray;}
+table{
+    width:80%;
+}
+td form {
+    margin:0;padding:0;
+}
+td form button.button{
+    padding:0.25em;margin:0.25em;
+    background:none;
+    color:blue;
+}
+td form button.button:hover{
+    background:none;
+    color:steelblue;
+}
+
 
 
 
