--- a/templates/admin/list_articles.html.twig
+++ b/templates/admin/list_articles.html.twig
@@ -12,58 +12,75 @@
 
 {% block article %}
 
-                    <table class="table table-bordered border ">
-                        <thead class="thead-dark">
+
+                    <a href="{{ path('admin_insert_article') }}">Ajouter un article</a>
+
+    <table class="table table-striped  table-bordered border-dark mt-4 container">
+        <div class="d-flex justify-content-around">
+            <thead class="thead-dark container">
                             <tr>
-                                <th class="align-top">
-                                    <div class="custom-control custom-control-inline custom-checkbox custom-control-nameless m-0">
+                                <th class="align-top col-1">
+                                    <div class="custom-control custom-control-inline custom-checkbox custom-control-nameless m-0 col-1">
                                         <input type="checkbox" class="custom-control-input" id="all-items">
                                         <label class="custom-control-label" for="all-items"></label>
                                     </div>
                                 </th>
-                                <th class=" primary">title</th>
-                                <th class="">content</th>
-                                <th class="">image</th>
-                                <th class="">createdAt</th>
-                                <th class="">isPublished</th>
-                                <th class="">Actions</th>
+                                <th class="col-2">Titre</th>
+                                <th class="col-2">Résumé</th>
+                                <th class="col-2">image</th>
+                                <th class="col-2">Créer le</th>
+                                <th class="col-1">Publier le </th>
+                                <th class="col-2">Actions</th>
                             </tr>
                         </thead>
 
                          {% if articles|length>0 %}
-                                 {% for article in articles %}
 
-                        <tbody>
+                                {% for article in articles %}
+
+                                        <tbody>
+                                            <tr >
+                                                <td class="col-1">
+                                                    <div class="custom-control custom-control-inline custom-checkbox custom-control-nameless m-0 align-top">
+                                                        <input type="checkbox" class="custom-control-input" id="item-1">
+                                                        <label class="custom-control-label" for="item-1"></label>
+                                                    </div>
+                                                </td>
+
+                                                <td class="col-2" >{{article.title}}</td>
+                                                <td class="col-2">{{article.content}}</td>
+                                                <td class="col-2">
+                                                    <img src="{{article.image}}" class="img-fluid"/>
+                                                </td>
+                                                <td class="col-2">{{ article.createdAt|date('d/m/Y') }}</td>
+                                                <td class="col-1"><span>{{article.isPublished}}</span></td>
+                                                <td class="col-2">
+                                                    <div class="btn-group align-top">
+                                                        <button class="btn btn-sm btn-outline-secondary badge" type="button" data-toggle="modal" data-target="#user-form-modal">
+                                                            <a href="{{ path('admin_update_article', {'id': article.id}) }}">Modifier</a></button>
+                                                        <button class="btn btn-sm btn-outline-secondary badge" type="button">
+                                                            <a href="{{ path('admin_delete_article', {'id': article.id}) }}"><i class="fa fa-trash"></i>
+                                                        </button>
 
 
+                                                    </div>
+                                                </td>
+                                            </tr>
+                         {% else %}
 
-                            <tr>
-                                <td class="">
-                                    <div class="custom-control custom-control-inline custom-checkbox custom-control-nameless m-0 align-top">
-                                        <input type="checkbox" class="custom-control-input" id="item-1">
-                                        <label class="custom-control-label" for="item-1"></label>
-                                    </div>
-                                </td>
+                                <tr>
+                                    <td colspan="8">no records found</td>
+                                </tr>
 
-                                <td class="" >{{article.title}}</td>
-                                <td class="">{{article.content}}</td>
-                                <td class="">
-                                    {{article.image}}
-                                </td>
-                                <td class="">{{ article.createdAt|date('d/m/Y') }}</td>
-                                <td class=""><span>{{article.isPublished}}</span></td>
-                                <td class="">
-                                    <div class="btn-group align-top">
-                                        <button class="btn btn-sm btn-outline-secondary badge" type="button" data-toggle="modal" data-target="#user-form-modal">Edit</button>
-                                        <button class="btn btn-sm btn-outline-secondary badge" type="button"><i class="fa fa-trash"></i></button>
-                                    </div>
-                                </td>
-                            </tr>
-                            {% endfor %}
+                                {% endfor %}
+
+
+                        {% endif %}
                         </tbody>
+        </div>
                     </table>
 
-             {# <div class="article">
+             {#  <div class="article">
                  {% if article.category %}
                     <h1>{{ article.category.title }}</h1>
                 {%endif%}
@@ -77,7 +94,5 @@
                 <a href="{{ path('admin_delete_article', {'id': article.id}) }}">Supprimer</a>
             </div> #}
 
-    {% else %}
-        <p>Il n'y a pas d'article correspondant à votre recherche</p>
-    {% endif %}
 {% endblock article %}
+
