--- a/templates/admin/list_categories.html.twig
+++ b/templates/admin/list_categories.html.twig
@@ -1,25 +1,119 @@
-{%extends 'base.html.twig'%}
+{% extends 'base.html.twig' %}
+
+
+{% block title %}
+    Liste des articles
+{% endblock title %}
+
+{% block header %}
+
+{% endblock header %}
+
+
+{% block article %}
+
+
+    <a href="{{ path('admin_insert_article') }}">Ajouter un article</a>
+
+    <table class="table table-striped  table-bordered border-dark mt-4 container">
+        <div class="d-flex justify-content-around">
+                <thead class="thead-dark">
+                <tr class="">
+                    <th class="">
+                        <div class="custom-control custom-control-inline custom-checkbox custom-control-nameless m-0">
+                            <input type="checkbox" class="custom-control-input" id="all-items">
+                            <label class="custom-control-label" for="all-items"></label>
+                        </div>
+                    </th>
+                    <th class="">Titre</th>
+                    <th class="">Résumé</th>
+                    <th class="">Créer le</th>
+                    <th class="">Publier le </th>
+                    <th class="">Actions</th>
+                </tr>
+                </thead>
+
+                {% if categories|length>0 %}
+
+                {% for category in categories %}
+
+                <tbody>
+                <tr>
+                    <td class="">
+                        <div class="custom-control custom-control-inline custom-checkbox custom-control-nameless m-0 align-top">
+                            <input type="checkbox" class="custom-control-input" id="item-1">
+                            <label class="custom-control-label" for="item-1"></label>
+                        </div>
+                    </td>
+
+                    <td class="" >{{category.title}}</td>
+                    <td class="">{{category.description}}</td>
+                    <td class="">{{ category.createdAt|date('d/m/Y') }}</td>
+                    <td class=""><span>{{category.isPublished}}</span></td>
+                    <td class="">
+                        <div class="btn-group align-top">
+                            <button class="btn btn-sm btn-outline-secondary badge" type="button" data-toggle="modal" data-target="#user-form-modal">
+                                <a href="{{ path('admin_insert_categorie', {'id': category.id}) }}">Modifier</a></button>
+                            <button class="btn btn-sm btn-outline-secondary badge" type="button">
+                                <a href="{{ path('admin_delete_categorie', {'id': category.id}) }}"><i class="fa fa-trash"></i>
+                            </button>
+
+
+                        </div>
+                    </td>
+                </tr>
+                {% else %}
+
+                    <tr>
+                        <td colspan="8">no records found</td>
+                    </tr>
+
+                {% endfor %}
+
+
+                {% endif %}
+                </tbody>
+        </div>
+    </table>
+
+    {#  <div class="article">
+                 {% if article.category %}
+                    <h1>{{ article.category.title }}</h1>
+                {%endif%}
+
+                <a href="{{ path('admin_show_article', {'id': article.id}) }}" class="lienArticles">
+                    <h2 >{{article.title}}</h2>
+                </a>
+                <div class="image visible"><img src="{{article.image}}" alt="{{ article.title }}" class="resp anim"></div>
+                <p>{{ article.createdAt|date('d/m/Y') }}</p>
+
+                <a href="{{ path('admin_delete_article', {'id': article.id}) }}">Supprimer</a>
+            </div> #}
+
+{% endblock article %}
+
+
+
+{#  {%extends 'base.html.twig'%}
 
 {% block article%}
     <div class="categories">
         {% for category in categories %}
 
             {#  Pour faire afficher le titre de ma catégorie : category.title
-             grâce à la relation OneToMany qui relie les deux entités : article et category.#}
+             grâce à la relation OneToMany qui relie les deux entités : article et category.#
             <h2>{{ category.title }}</h2>
-            <button class="button">modifier</button>
-            <button class="button">supprimer</button>
+
 
             {# articles étant une arrayCollection j'effectue une boucle
-            afin de récupérer tous les articles contenus dans chaque catégorie : ici on récupère le titre des articles#}
+            afin de récupérer tous les articles contenus dans chaque catégorie : ici on récupère le titre des articles#
             {% for article in category.articles %}
                 <h3>{{ article.title }}</h3>
-                <button class="button">modifier</button>
-                <button class="button">supprimer</button>
+
             {% endfor%}
 
         {% endfor %}
     </div>
 
-{% endblock article%}
+{% endblock article%}#}
 
