--- a/templates/admin/list_categories.html.twig
+++ b/templates/admin/list_categories.html.twig
@@ -13,7 +13,7 @@
 {% block article %}
 
 
-    <a href="{{ path('admin_insert_article') }}">Ajouter un article</a>
+    <a href="{{ path('admin_insert_categorie') }}">Ajouter une categorie</a>
 
     <table class="table table-striped  table-bordered border-dark mt-4 container">
         <div class="d-flex justify-content-around">
