--- a/templates/admin/list_articles.html.twig
+++ b/templates/admin/list_articles.html.twig
@@ -56,7 +56,7 @@
                                                 <td class="" >{{article.title}}</td>
                                                 <td class="col-2">{{article.content}}</td>
                                                 <td class="col-2">
-                                                    <img src="{{article.image}}" class="img-fluid"/>
+                                                    <img src="{{asset('/uploads/images'~article.image)}}" alt="{{article.title}}"class="img-fluid"/>
                                                 </td>
                                                 <td class="col-2">{{ article.createdAt|date('d/m/Y') }}</td>
                                                 <td class="col-1"><span>{{article.isPublished}}</span></td>
